--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Daniel Newman</title>
-<link rel= "stylesheet" href = "style.css">
+<link rel= "stylesheet" href = "https://danielwnewman.github.io/home/style.css">
 </head>
 <body>
 <div class="postTitle">Why I Quit Facebook</div>
