--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
  <div class="navBar">Daniel W. Newman
  <ul>
- <a href="/"><li>Home</li></a>
+ <a href="/home"><li>Home</li></a>
  <a href="/wiki"><li>Wiki</li></a>
  </ul>
  </div>
