--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1,2 +1,6 @@
 <!Doctype html>
-<>
+<html>
+<body>  
+<a href=www.puritainboard.com> <P class="description">A discussion board for the confessionally reformed</p>
+</body>
+</html>
