--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1,6 +1,12 @@
 <!Doctype html>
 <html>
+ <head>
+  <title>Wiki-Daniel W. Newman</title>
+   <link rel="stylesheet" href="https://danielwnewman.github.io/home/style.css">
+  </head>
 <body>  
+  <div class="links">
 <a href=www.puritainboard.com> <P class="description">Puritain Board --- A discussion board for the confessionally reformed</p>
-</body>
+</div>
+  </body>
 </html>
