--- a/wiki/index.html
+++ b/wiki/index.html
@@ -3,6 +3,7 @@
  <head>
   <title>Wiki-Daniel W. Newman</title>
    <link rel="stylesheet" href="https://danielwnewman.github.io/home/style.css">
+   <link rel="stylesheet" href="https://danielwnewman.github.io/home/wiki/style.css">
   </head>
 <body>  
   <div class="links">
