--- a/wiki/index.html
+++ b/wiki/index.html
@@ -7,6 +7,7 @@
   </head>
 <body>  
   <div class="links">
+ <h1>Religion</h1>
 <a href=www.puritainboard.com> <P class="description">Puritain Board --- A discussion board for the confessionally reformed</p>
 </div>
   </body>
