--- a/wiki/index.html
+++ b/wiki/index.html
@@ -8,7 +8,8 @@
 <body>  
   <div class="links">
  <h2>Religion</h2>
-<a href=www.puritainboard.com> <P class="description">Puritain Board --- A discussion board for the confessionally reformed</p>
-</div>
+<a href="www.puritainboard.com"> <P class="description">Puritain Board --- A discussion board for the confessionally reformed</p>
+<a href="https://www.sermonaudio.com"> <P class="description">Sermon Audio --- The best sermon collection on the internet</p>
+ </div>
   </body>
 </html>
