--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 <!--Heading-->
 <div class="container">
  <div class="page-header text-center align-items-center">
-   <h1><a href="#">Daniel W. Newman</a></h1>
+   <h1><a href="https://danielwnewman.github.io/home/">Daniel W. Newman</a></h1>
  </div>
 
   <div class="nav-scroller py-1 mb-2" >
     <nav class="nav d-flex">
-      <a href="/home" class= "p-2 text-muted">Home</a>
-      <a href="/index" class= "p-2 text-muted">Index</a>
-      <a href="/pictures" class= "p-2 text-muted">Pictures</a>
-      <a href="/archive" class= "p-2 text-muted">Archive</a>
-      <a href="/calendar" class= "p-2 text-muted">Calendar</a>
-      <a href="/howto" class= "p-2 text-muted">How to...</a>
+      <a href="https://danielwnewman.github.io/home" class= "p-2 text-muted">Home</a>
+      <a href="https://danielwnewman.github.io/home/index" class= "p-2 text-muted">Index</a>
+      <a href="https://danielwnewman.github.io/home/pictures" class= "p-2 text-muted">Pictures</a>
+      <a href="https://danielwnewman.github.io/home/archive" class= "p-2 text-muted">Archive</a>
+      <a href="https://danielwnewman.github.io/home/calendar" class= "p-2 text-muted">Calendar</a>
+      <a href="https://danielwnewman.github.io/home/howto" class= "p-2 text-muted">How to...</a>
     </nav>
   </div>
 
