--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
       </blockquote>
     </div>
     </div>
+     
+      <!--A Post -->
+    <div class="col-sm-4">
+     <div class="container" id ="post">
+          <h2>Donate</h2>
+          <h4><small>June, 2019 --- Daniel W. Newman</small></h4>
+      <blockquote>
+          Hey, do you want to help me make my website better? send me Bitcoin at this address: 1M8u7CyJV FdWwLGKLDX SJHcYhPq7G RLKyC
+      </blockquote>
+    </div>
+    </div>
+     
   </div>
 </div>
 
