--- a/links/index.html
+++ b/links/index.html
@@ -8,7 +8,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-   <link rel= "stylesheet" href = "https://danielwnewman.github.io/home/style.css">
+   <link rel= "stylesheet" href = "style.css">
 
 <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -23,6 +23,7 @@
   <div class="nav-scroller py-1 mb-2" >
     <nav class="nav d-flex">
       <a href="https://danielwnewman.github.io/home" class= "p-2 text-muted">Home</a>
+      <a href="https://danielwnewman.github.io/home/about" class= "p-2 text-muted">About</a>
       <a href="https://danielwnewman.github.io/home/links" class= "p-2 text-muted">Index</a>
       <a href="https://danielwnewman.github.io/home/pictures" class= "p-2 text-muted">Pictures</a>
       <a href="https://danielwnewman.github.io/home/archive" class= "p-2 text-muted">Archive</a>
@@ -30,12 +31,49 @@
       <a href="https://danielwnewman.github.io/home/howto" class= "p-2 text-muted">How to...</a>
     </nav>
   </div>
+  <div class="jumbotron">
+    <h1>Here's what the different colors mean:</h1>
+      <p class="text-info">Blue: information from the website itself.</p>
+      <p class="text-warning">Yellow: something I find distasteful.</p>
+      <p class="text-danger">Red: a warning</p>
 
-  <div class="container">
-    <div class"jumbotron">
-      <h1>Oops! We aren't ready for you yet.</h1>
-      <p>Sorry</p>
+  </div>
+  <div class="container align-items-center">
+<!--A new catagory-->
+    <h2 id="category">Spiritual Encouragement</h2>
+<!--A link-->
+    <div class="container">
+      <div class="card card-body bg-light" id="link">
+        <a href="https://puritanboard.com">Puritan Board</a>
+        <p>Puritan Board is an discussion page for confessionally reformed christians. The standard for obtaining an account is high, but much of the content can be read without an account. The board operates on donations and has no advertisements.</p>
+      </div>
     </div>
+<!--A link-->
+    <div class="container">
+      <div class="card card-body bg-light" id="link">
+        <a href="https://sermonaudio.com">Sermon Audio</a>
+        <p> <span class="text-info">Sermon Audio is "The largest and most trusted library of audio sermons from conservative churches and ministries worldwide." It boasts "1,702,336 free sermons from churches + ministries worldwide."</span> While it's sermons are free to listen to, Sermon Audio has select advertisements on its webpage as well as <span class="text-info">two paid programs. The first program ($39.95/mo) is for churches who wish to upload their content. The second ($4.95/mo) allows listeners to access "more features and tools"</span></p>
+      </div>
+    </div>
+  </div>
+  <!--A new catagory-->
+  <div class="container align-items-center">
+      <h2 id="category">News</h2>
+      <!--A link-->
+      <div class="container">
+        <div class="card card-body bg-light" id="link">
+          <a href="https://theblaze.com">The Blaze</a>
+          <p>The brain child of conservative commentator Glenn Beck, this website is quickly becoming one of the only reliable news websites on the internet.</p>
+        </div>
+      </div>
+      <!--A link-->
+      <div class="container">
+        <div class="card card-body bg-light" id="link">
+          <a href="https://dailywire.com">Daily Wire</a>
+          <p>Ben Shapiro's news website.</p>
+          <p class="text-warning">Some of the content featured on this website has been needlessly lewd.</p>
+        </div>
+      </div>
   </div>
 </div>
 
