--- a/links/index.html
+++ b/links/index.html
@@ -33,14 +33,16 @@
   </div>
   <div class="jumbotron">
     <h1>Here's what the different colors mean:</h1>
-      <p class="text-info">Blue: information from the website itself.</p>
+      <p class="text-info">Blue: a fact stated on the website.</p>
       <p class="text-warning">Yellow: something I find distasteful.</p>
       <p class="text-danger">Red: a warning</p>
 
   </div>
   <div class="container align-items-center">
+
 <!--A new catagory-->
     <h2 id="category">Spiritual Encouragement</h2>
+
 <!--A link-->
     <div class="container">
       <div class="card card-body bg-light" id="link">
@@ -48,32 +50,39 @@
         <p>Puritan Board is an discussion page for confessionally reformed christians. The standard for obtaining an account is high, but much of the content can be read without an account. The board operates on donations and has no advertisements.</p>
       </div>
     </div>
+
 <!--A link-->
     <div class="container">
       <div class="card card-body bg-light" id="link">
         <a href="https://sermonaudio.com">Sermon Audio</a>
-        <p> <span class="text-info">Sermon Audio is "The largest and most trusted library of audio sermons from conservative churches and ministries worldwide." It boasts "1,702,336 free sermons from churches + ministries worldwide."</span> While it's sermons are free to listen to, Sermon Audio has select advertisements on its webpage as well as <span class="text-info">two paid programs. The first program ($39.95/mo) is for churches who wish to upload their content. The second ($4.95/mo) allows listeners to access "more features and tools"</span></p>
+        <p><span class="text-info">"The largest and most trusted library of audio sermons from conservative churches and ministries worldwide." It boasts "1,702,336 free sermons from churches + ministries worldwide."</span> While it's sermons are free to listen to, Sermon Audio has select advertisements on its webpage as well as <span class="text-info">two paid programs. The first program ($39.95/mo) is for churches who wish to upload their content. The second ($4.95/mo) allows listeners to access "more features and tools"</span></p>
       </div>
     </div>
+
   </div>
   <!--A new catagory-->
   <div class="container align-items-center">
       <h2 id="category">News</h2>
+
       <!--A link-->
       <div class="container">
         <div class="card card-body bg-light" id="link">
           <a href="https://theblaze.com">The Blaze</a>
-          <p>The brain child of conservative commentator Glenn Beck, this website is quickly becoming one of the only reliable news websites on the internet.</p>
+          <p>The brain child of conservative commentator Glenn Beck, this website is quickly becoming one of the only reliable news websites on the internet.The Blaze has a subscription service costing <span class="text-info">$10/mo, $99/yr, and $199/3yrs.</span></p>
         </div>
       </div>
+
       <!--A link-->
       <div class="container">
         <div class="card card-body bg-light" id="link">
           <a href="https://dailywire.com">Daily Wire</a>
-          <p>Ben Shapiro's news website.</p>
+          <p>Ben Shapiro's news website. Daily Wire has a subscription service costing either<span class="text-info">$9.99/mo or $99/yr.</span></p>
           <p class="text-warning">Some of the content featured on this website has been needlessly lewd.</p>
         </div>
       </div>
+
+
+
   </div>
 </div>
 
