--- a/about/index.html
+++ b/about/index.html
@@ -34,12 +34,27 @@
 
   <div class="container">
     <div class"jumbotron">
-      <h1>Oops! We aren't ready for you yet.</h1>
-      <p>Sorry</p>
+      <h1>About me</h1>
+      <ul>
+        <li>I was born in Spokane, Washington to Geoff and Michelle Newman in 1999.</li>
+        <li>I believe in Jesus Christ and the Christian religion as set forth in the Westminster Confession of Faith.</li>
+        <li>I was homeschooled, and am now studying political science at Pensacola Christian College.</li>
+      </ul>
     </div>
   </div>
 </div>
+<footer class="blog-footer">
+  <div class="row justify-content-between">
+    <div class="col-sm-4">
+      <p><a href="https://danielwnewman.github.io/home/about" class= "p-2 text-muted">About</a></p>
+    </div>
+    <div class="col-sm-4">
+      <p><a href="https://danielwnewman.github.io/home/contact" class= "p-2 text-muted">Contact</a></p>
+    </div>
+  </div>
+      <a href="#">Back to top</a>
 
+</footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
