--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   <div class="nav-scroller py-1 mb-2" >
     <nav class="nav d-flex">
       <a href="https://danielwnewman.github.io/home" class= "p-2 text-muted">Home</a>
-      <a href="https://danielwnewman.github.io/home/about" class= "p-2 text-muted">About</a>
       <a href="https://danielwnewman.github.io/home/links" class= "p-2 text-muted">Index</a>
       <a href="https://danielwnewman.github.io/home/pictures" class= "p-2 text-muted">Pictures</a>
       <a href="https://danielwnewman.github.io/home/archive" class= "p-2 text-muted">Archive</a>
@@ -66,6 +65,18 @@
 
   </div>
 </div>
+<footer class="blog-footer">
+  <div class="row justify-content-between">
+    <div class="col-sm-4">
+      <p><a href="https://danielwnewman.github.io/home/about" class= "p-2 text-muted">About</a></p>
+    </div>
+    <div class="col-sm-4">
+      <p><a href="https://danielwnewman.github.io/home/contact" class= "p-2 text-muted">Contact</a></p>
+    </div>
+  </div>
+      <a href="#">Back to top</a>
+
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
