--- a/pictures/index.html
+++ b/pictures/index.html
@@ -32,11 +32,24 @@
     </nav>
   </div>
 <div class="row">
-    <div class="col-sm-4"><img src="https://danielwnewman.github.io/home/pictures/icecyclehikebutterfly.jpeg" class="img-thumbnail" alt="A yellow butterfly against a mountainous backdrop"><p class="text-dark align-items-center">Taken on top of a mountain overlooking Leavenworth, WA</p></div>
-    <div class="col-sm-4"><img src="https://danielwnewman.github.io/home/pictures/ccgraf.jpg" class="img-thumbnail" alt="A graffiti cross between a redneck and a stick of cotton candy"><p class="text-dark align-items-center">This looks like a cross between a redneck and a stick of cotton candy</p></div>
-    <div class="col-sm-4"><img src="https://danielwnewman.github.io/home/pictures/sophmoreparty.jpg" class="img-thumbnail" alt="Five friends at a pensacola christian college class party"><p class="text-dark align-items-center">You're only a college sophomore once</p></div>
+    <div class="col-sm-4"><img src="/Users/danielnewman/Documents/Creative/Websites/Blog/home/pictures/icecyclehikebutterfly.jpeg" class="img-thumbnail" alt="A yellow butterfly against a mountainous backdrop"><p class="text-dark align-items-center">Taken on top of a mountain overlooking Leavenworth, WA</p></div>
+    <div class="col-sm-4"><img src="/Users/danielnewman/Documents/Creative/Websites/Blog/home/pictures/ccgraf.jpg" class="img-thumbnail" alt="A graffiti cross between a redneck and a stick of cotton candy"><p class="text-dark align-items-center">This looks like a cross between a redneck and a stick of cotton candy</p></div>
+    <div class="col-sm-4"><img src="/Users/danielnewman/Documents/Creative/Websites/Blog/home/pictures/sophmoreparty.jpg" class="img-thumbnail" alt="Five friends at a pensacola christian college class party"><p class="text-dark align-items-center">You're only a college sophomore once</p></div>
 </div>
 </div>
+
+<footer class="blog-footer">
+  <div class="row justify-content-between">
+    <div class="col-sm-4">
+      <p><a href="https://danielwnewman.github.io/home/about" class= "p-2 text-muted">About</a></p>
+    </div>
+    <div class="col-sm-4">
+      <p><a href="https://danielwnewman.github.io/home/contact" class= "p-2 text-muted">Contact</a></p>
+    </div>
+  </div>
+      <a href="#">Back to top</a>
+
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
