--- a/links/index.html
+++ b/links/index.html
@@ -80,10 +80,42 @@
           <p class="text-warning">Some of the content featured on this website has been needlessly lewd.</p>
         </div>
       </div>
-
-
-
   </div>
+  <!--A new catagory-->
+  <div class="container align-items-center">
+      <h2 id="category">Finance</h2>
+
+      <!--A link-->
+      <div class="container">
+        <div class="card card-body bg-light" id="link">
+          <a href="https://finance.yahoo.com">Yahoo Finance</a>
+          <p>One of the best sources of stock and financial information.</p>
+        </div>
+      </div>
+
+      <!--A link-->
+      <div class="container">
+        <div class="card card-body bg-light" id="link">
+          <a href="https://99bitcoins.com">99 Bitcoins</a>
+          <p>A simple explanation of how bitcoin works.</p>
+
+        </div>
+      </div>
+  </div>
+
+  <!--A new catagory-->
+  <div class="container align-items-center">
+      <h2 id="category">Humor</h2>
+
+      <!--A link-->
+      <div class="container">
+        <div class="card card-body bg-light" id="link">
+          <a href="https://babylonbee.com">Babylon Bee</a>
+          <p>A Christian satire website. <span class="text-warning">This website has a lot of advertisements which can be annoying.</span></p>
+        </div>
+      </div>
+  </div>
+
 </div>
 
 <footer class="blog-footer">
