--- a/pictures/index.html
+++ b/pictures/index.html
@@ -32,9 +32,9 @@
     </nav>
   </div>
 <div class="row">
-    <div class="col-sm-4"><img src="https://github.com/DanielWNewman/home/blob/master/pictures/icecyclehikebutterfly.jpeg" class="img-thumbnail" alt="A yellow butterfly against a mountainous backdrop"><p class="text-dark align-items-center">Taken on top of a mountain overlooking Leavenworth, WA</p></div>
-    <div class="col-sm-4"><img src="https://github.com/DanielWNewman/home/blob/master/pictures/ccgraf.jpg" class="img-thumbnail" alt="A graffiti cross between a redneck and a stick of cotton candy"><p class="text-dark align-items-center">This looks like a cross between a redneck and a stick of cotton candy</p></div>
-    <div class="col-sm-4"><img src="https://github.com/DanielWNewman/home/blob/master/pictures/sophmoreparty.jpg" class="img-thumbnail" alt="Five friends at a pensacola christian college class party"><p class="text-dark align-items-center">You're only a college sophomore once</p></div>
+    <div class="col-sm-4"><img src="https://raw.githubusercontent.com/DanielWNewman/home/master/pictures/icecyclehikebutterfly.jpeg" class="img-thumbnail" alt="A yellow butterfly against a mountainous backdrop"><p class="text-dark align-items-center">Taken on top of a mountain overlooking Leavenworth, WA</p></div>
+    <div class="col-sm-4"><img src="https://raw.githubusercontent.com/DanielWNewman/home/master/pictures/ccgraf.jpg" class="img-thumbnail" alt="A graffiti cross between a redneck and a stick of cotton candy"><p class="text-dark align-items-center">This looks like a cross between a redneck and a stick of cotton candy</p></div>
+    <div class="col-sm-4"><img src="https://raw.githubusercontent.com/DanielWNewman/home/master/pictures/sophmoreparty.jpg" class="img-thumbnail" alt="Five friends at a pensacola christian college class party"><p class="text-dark align-items-center">You're only a college sophomore once</p></div>
 </div>
 </div>
 
