--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <!-- Required meta tags -->
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
    <link rel= "stylesheet" href = "style.css">
 
 <!-- Bootstrap CSS -->
@@ -32,7 +31,7 @@
   </div>
 
 
-  <div class="row">
+  <div class="row" id ="body">
   <!--A Post -->
     <div class="col-md-8">
      <div class="container" id ="post">
