--- a/about/index.html
+++ b/about/index.html
@@ -15,15 +15,14 @@
 </head>
 <body>
 <!--Heading-->
-<div class="container">
- <div class="page-header text-center align-items-center">
+<div class="container align-items-center">
+ <div class="page-header text-center">
    <h1><a href="https://danielwnewman.github.io/home/">Daniel W. Newman</a></h1>
  </div>
 
   <div class="nav-scroller py-1 mb-2" >
     <nav class="nav d-flex">
       <a href="https://danielwnewman.github.io/home" class= "p-2 text-muted">Home</a>
-      <a href="https://danielwnewman.github.io/home/about" class= "p-2 text-muted">About</a>
       <a href="https://danielwnewman.github.io/home/links" class= "p-2 text-muted">Index</a>
       <a href="https://danielwnewman.github.io/home/pictures" class= "p-2 text-muted">Pictures</a>
       <a href="https://danielwnewman.github.io/home/archive" class= "p-2 text-muted">Archive</a>
@@ -32,15 +31,19 @@
     </nav>
   </div>
 
-  <div class="container">
-    <div class"jumbotron">
-      <h1>About me</h1>
-      <ul>
-        <li>I was born in Spokane, Washington to Geoff and Michelle Newman in 1999.</li>
-        <li>I believe in Jesus Christ and the Christian religion as set forth in the Westminster Confession of Faith.</li>
-        <li>I was homeschooled, and am now studying political science at Pensacola Christian College.</li>
-      </ul>
-    </div>
+  <div class="container" style="width:450px;">
+
+    <div class="card" style="margin:20px 0 24px 0;">
+    <img class="card-img-top" src="file:///Users/danielnewman/Documents/Creative/Websites/Blog/home/pictures/profile.jpg" alt="image" style="width:100%">
+  <div class="card-body">
+    <h1>About Me</h1>
+    <ul>
+      <li>I was born in Spokane, Washington to Geoff and Michelle Newman in 1999.</li>
+      <li>I believe in Jesus Christ and the Christian religion as set forth in the Westminster Confession of Faith.</li>
+      <li>I was homeschooled, and am now studying political science at Pensacola Christian College.</li>
+    </ul>
+  </div>
+</div>
   </div>
 </div>
 <footer class="blog-footer">
