--- a/links/index.html
+++ b/links/index.html
@@ -23,7 +23,6 @@
   <div class="nav-scroller py-1 mb-2" >
     <nav class="nav d-flex">
       <a href="https://danielwnewman.github.io/home" class= "p-2 text-muted">Home</a>
-      <a href="https://danielwnewman.github.io/home/about" class= "p-2 text-muted">About</a>
       <a href="https://danielwnewman.github.io/home/links" class= "p-2 text-muted">Index</a>
       <a href="https://danielwnewman.github.io/home/pictures" class= "p-2 text-muted">Pictures</a>
       <a href="https://danielwnewman.github.io/home/archive" class= "p-2 text-muted">Archive</a>
@@ -58,7 +57,13 @@
         <p><span class="text-info">"The largest and most trusted library of audio sermons from conservative churches and ministries worldwide." It boasts "1,702,336 free sermons from churches + ministries worldwide."</span> While it's sermons are free to listen to, Sermon Audio has select advertisements on its webpage as well as <span class="text-info">two paid programs. The first program ($39.95/mo) is for churches who wish to upload their content. The second ($4.95/mo) allows listeners to access "more features and tools"</span></p>
       </div>
     </div>
-
+    <!--A link-->
+        <div class="container">
+          <div class="card card-body bg-light" id="link">
+            <a href="https://www.blueletterbible.org">Blue Letter Bible</a>
+            <p>Contains a vast number of Bible resources all for free. According to their website: "Blue Letter Bible provides powerful tools for an in-depth study of God’s Word through our free online reference library, with study tools that are grounded in the historical, conservative Christian faith."</p>
+          </div>
+        </div>
   </div>
   <!--A new catagory-->
   <div class="container align-items-center">
@@ -75,11 +80,19 @@
       <!--A link-->
       <div class="container">
         <div class="card card-body bg-light" id="link">
+          <a href="https://news.spinquark.com">Spin Quark</a><p> is a libertarian news aggregator <span class="text-info">"Updated 24/7</span> by a team of wicked smart news junkies who <span class="text-info">feel like Drudge has been slipping for years</span>, Spinquark will cover the important news of the day crossing politics, tech, scandal, culture, and random weird stories you need to know about."</p>
+        </div>
+      </div>
+
+      <!--A link-->
+      <div class="container">
+        <div class="card card-body bg-light" id="link">
           <a href="https://dailywire.com">Daily Wire</a>
           <p>Ben Shapiro's news website. Daily Wire has a subscription service costing either<span class="text-info">$9.99/mo or $99/yr.</span></p>
           <p class="text-warning">Some of the content featured on this website has been needlessly lewd.</p>
         </div>
       </div>
+
   </div>
   <!--A new catagory-->
   <div class="container align-items-center">
@@ -115,7 +128,64 @@
         </div>
       </div>
   </div>
+  <!--A new catagory-->
+  <div class="container align-items-center">
+      <h2 id="category">Programming</h2>
 
+      <!--A link-->
+      <div class="container">
+        <div class="card card-body bg-light" id="link">
+          <a href="https://codeacademy.com">Code Academy</a>
+          <p>A simple, non-exhaustive way to learn how to program. Code Academy has both a paid and free programs.</p>
+        </div>
+      </div>
+
+      <!--A link-->
+      <div class="container">
+        <div class="card card-body bg-light" id="link">
+          <a href="https://w3schools.com">W3 Schools</a>
+          <p>Instructions for various internet programming languages. Including       <span class="text-info">HTML, SASS, Bootstrap, Phython, and PHP!</span></p>
+
+        </div>
+      </div>
+
+      <!--A link-->
+      <div class="container">
+        <div class="card card-body bg-light" id="link">
+          <a href="https://getbootstrap.com">Bootstrap</a>
+          <p>Bootstrap is how I built this website. It helped me easily format this website to multiple web browsers.   <a href="https://w3schools.com">W3Schools</a> has a tutorial for Bootstrap.</p>
+
+        </div>
+      </div>
+
+  </div>
+
+  <!--A new catagory-->
+  <div class="container align-items-center">
+      <h2 id="category">Reference</h2>
+
+      <!--A link-->
+      <div class="container">
+        <div class="card card-body bg-light" id="link">
+          <a href="http://webstersdictionary1828.com">Websters 1828 Dictionary</a>
+          <p>The original American dictionary. This dictionary follows traditional linguistic philosophy.</p>
+        </div>
+      </div>
+
+  </div>
+
+  <!--A new catagory-->
+  <div class="container align-items-center">
+      <h2 id="category">Books</h2>
+
+      <!--A link-->
+      <div class="container">
+        <div class="card card-body bg-light" id="link">
+          <a href="http://www.gutenberg.org">Project Gutenberg</a>
+          <p>An archive of ebooks that have gone out of copyright. <span class="text-warning">Project Gutenburg does not have advertisements. .</span></p>
+        </div>
+      </div>
+  </div>
 </div>
 
 <footer class="blog-footer">
