--- a/pictures/index.html
+++ b/pictures/index.html
@@ -23,7 +23,6 @@
   <div class="nav-scroller py-1 mb-2" >
     <nav class="nav d-flex">
       <a href="https://danielwnewman.github.io/home" class= "p-2 text-muted">Home</a>
-      <a href="https://danielwnewman.github.io/home/about" class= "p-2 text-muted">About</a>
       <a href="https://danielwnewman.github.io/home/links" class= "p-2 text-muted">Index</a>
       <a href="https://danielwnewman.github.io/home/pictures" class= "p-2 text-muted">Pictures</a>
       <a href="https://danielwnewman.github.io/home/archive" class= "p-2 text-muted">Archive</a>
@@ -32,9 +31,9 @@
     </nav>
   </div>
 <div class="row">
-    <div class="col-sm-4"><img src="https://raw.githubusercontent.com/DanielWNewman/home/master/pictures/icecyclehikebutterfly.jpeg" class="img-thumbnail" alt="A yellow butterfly against a mountainous backdrop"><p class="text-dark align-items-center">Taken on top of a mountain overlooking Leavenworth, WA</p></div>
-    <div class="col-sm-4"><img src="https://raw.githubusercontent.com/DanielWNewman/home/master/pictures/ccgraf.jpg" class="img-thumbnail" alt="A graffiti cross between a redneck and a stick of cotton candy"><p class="text-dark align-items-center">This looks like a cross between a redneck and a stick of cotton candy</p></div>
-    <div class="col-sm-4"><img src="https://raw.githubusercontent.com/DanielWNewman/home/master/pictures/sophmoreparty.jpg" class="img-thumbnail" alt="Five friends at a pensacola christian college class party"><p class="text-dark align-items-center">You're only a college sophomore once</p></div>
+    <div class="col-sm-4"><img src="/Users/danielnewman/Documents/Creative/Websites/Blog/home/pictures/icecyclehikebutterfly.jpeg" class="img-thumbnail" alt="A yellow butterfly against a mountainous backdrop"><p class="text-dark align-items-center">Taken on top of a mountain overlooking Leavenworth, WA</p></div>
+    <div class="col-sm-4"><img src="/Users/danielnewman/Documents/Creative/Websites/Blog/home/pictures/ccgraf.jpg" class="img-thumbnail" alt="A graffiti cross between a redneck and a stick of cotton candy"><p class="text-dark align-items-center">This looks like a cross between a redneck and a stick of cotton candy</p></div>
+    <div class="col-sm-4"><img src="/Users/danielnewman/Documents/Creative/Websites/Blog/home/pictures/sophmoreparty.jpg" class="img-thumbnail" alt="Five friends at a pensacola christian college class party"><p class="text-dark align-items-center">You're only a college sophomore once</p></div>
 </div>
 </div>
 
