--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
   <div class="row" id ="body">
 
   <!--A Post -->
-    <div class="col-md-8">
+    <div class="col-md-4">
      <div class="container" id ="link">
           <h2><a href="https://www.foxnews.com/science/moon-landing-bible-apollo-11-buzz-aldrin-communion">The Lord's Supper was the Fist Meal on the Moon</a></h2>
           <h4><mdall>July 18, 2019 --- Daniel W. Newman</mdall></h4>
       <blockquote>
-          <p>&ensp;&ensp;Buzz Aldri reportedly took communion before exiting the lunar module, making him the first person do so on an alien terrestrial body. </p>
+          <p>&ensp;&ensp;Buzz Aldrin reportedly took communion before exiting the lunar module, making him the first person do so on an terrestrial body besides Earth. </p>
         </div>
         </div>
         </div>
