--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--Heading-->
 <div class="container">
  <div class="page-header text-center align-items-center">
-   <h1><a href="https://danielwnewman.github.io/home/">Daniel W. Newman</a></h1>
+   <h1><a href="https://danielwnewman.github.io/home/">The Wayne Profile</a></h1>
  </div>
 
   <div class="nav-scroller py-1 mb-2" >
