--- a/pictures/index.html
+++ b/pictures/index.html
@@ -17,7 +17,7 @@
 <!--Heading-->
 <div class="container">
  <div class="page-header text-center align-items-center">
-   <h1><a href="https://danielwnewman.github.io/home/">Daniel W. Newman</a></h1>
+   <h1><a href="https://danielwnewman.github.io/home/">The Wayne Profile</a></h1>
  </div>
 
   <div class="nav-scroller py-1 mb-2" >
@@ -30,11 +30,11 @@
       <a href="https://danielwnewman.github.io/home/howto" class= "p-2 text-muted">How to...</a>
     </nav>
   </div>
-<div class="row">
+  <div class="row">
     <div class="col-sm-4"><img src="https://raw.githubusercontent.com/DanielWNewman/home/master/pictures/icecyclehikebutterfly.jpeg" class="img-thumbnail" alt="A yellow butterfly against a mountainous backdrop"><p class="text-dark align-items-center">Taken on top of a mountain overlooking Leavenworth, WA</p></div>
     <div class="col-sm-4"><img src="https://raw.githubusercontent.com/DanielWNewman/home/master/pictures/ccgraf.jpg" class="img-thumbnail" alt="A graffiti cross between a redneck and a stick of cotton candy"><p class="text-dark align-items-center">This looks like a cross between a redneck and a stick of cotton candy</p></div>
     <div class="col-sm-4"><img src="https://raw.githubusercontent.com/DanielWNewman/home/master/pictures/sophmoreparty.jpg" class="img-thumbnail" alt="Five friends at a pensacola christian college class party"><p class="text-dark align-items-center">You're only a college sophomore once</p></div>
-</div>
+  </div>
 </div>
 
 <footer class="blog-footer">
