--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@
 <!--Heading-->
 <div class="container align-items-center">
  <div class="page-header text-center">
-   <h1><a href="https://danielwnewman.github.io/home/">Daniel W. Newman</a></h1>
+   <h1><a href="https://danielwnewman.github.io/home/">The Wayne Profile</a></h1>
  </div>
 
   <div class="nav-scroller py-1 mb-2" >
@@ -33,8 +33,8 @@
 
   <div class="container" style="width:450px;">
 
-    <div class="card" style="margin:20px 0 24px 0;">
-    <img class="card-img-top" src="https://github.com/DanielWNewman/home/blob/master/about/profile.jpg?raw=true" alt="image" style="width:100%">
+    <div class="card" style="margin:20px 20% 24px 20%;">
+    <img class="card-img-top" src="file:///Users/danielnewman/Documents/Creative/Websites/Blog/home/pictures/profile.jpg" alt="image" style="width:100%">
   <div class="card-body">
     <h1>About Me</h1>
     <ul>
