--- a/pictures/index.html
+++ b/pictures/index.html
@@ -34,6 +34,8 @@
     <div class="col-sm-4"><img src="https://raw.githubusercontent.com/DanielWNewman/home/master/pictures/icecyclehikebutterfly.jpeg" class="img-thumbnail" alt="A yellow butterfly against a mountainous backdrop"><p class="text-dark align-items-center">Taken on top of a mountain overlooking Leavenworth, WA</p></div>
     <div class="col-sm-4"><img src="https://raw.githubusercontent.com/DanielWNewman/home/master/pictures/ccgraf.jpg" class="img-thumbnail" alt="A graffiti cross between a redneck and a stick of cotton candy"><p class="text-dark align-items-center">This looks like a cross between a redneck and a stick of cotton candy</p></div>
     <div class="col-sm-4"><img src="https://raw.githubusercontent.com/DanielWNewman/home/master/pictures/sophmoreparty.jpg" class="img-thumbnail" alt="Five friends at a pensacola christian college class party"><p class="text-dark align-items-center">You're only a college sophomore once</p></div>
+<div class="col-sm-4"><img src="https://raw.githubusercontent.com/DanielWNewman/home/master/pictures/flyoverch.jpg" class="img-thumbnail" alt="Chicago at night from the air">"It is hopeless for the occasional visitor to try to keep up with Chicago-she outgrows his prophecies faster than he can make them. She is always a novelty; for she is never the Chicago you saw when you passed through the last time." ~Mark Twain in <em>Life On The Mississippi</em></p></div>
+
   </div>
 </div>
 
