--- a/index.html
+++ b/index.html
@@ -42,8 +42,21 @@
           <p>&ensp;&ensp;Buzz Aldrin reportedly took communion before exiting the lunar module, making him the first person do so on an terrestrial body besides Earth. </p>
         </div>
         </div>
-        </div>
-      </div>
+
+        <!--A Post -->
+          <div class="col-md-4">
+           <div class="container" id ="link">
+                <h2>The news in meme</h2>
+                <h4><mdall>July 30, 2019 --- Daniel W. Newman</mdall></h4>
+            <blockquote>
+              <img style="width:260px;" src="/Users/danielnewman/Desktop/buzzpanda.jpg">
+                <a href=""><p class=".bg-light">HK protesters use American flag to honor American ideals of freedom, &c.</p></a>
+              </div>
+              </div>
+
+
+
+
 <footer class="blog-footer">
   <div class="row justify-content-between">
     <div class="col-md-4">
