--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
 
     <h2>2019 Q3</h2>
-  <div class="row" id ="body">
+  <div class="row" id ="body"></div>
 
   <!--A Post -->
     <div class="col-md-4">
@@ -49,26 +49,24 @@
                 <h2>The news in meme</h2>
                 <h4><mdall>July 30, 2019 --- Daniel W. Newman</mdall></h4>
             <blockquote>
-              <img style="width:260px;" src="https://github.com/DanielWNewman/home/blob/master/pictures/buzzpanda.jpg?raw=true">
+              <img style="width:260px;" src="/Users/danielnewman/Desktop/buzzpanda.jpg">
                 <a href=""><p class=".bg-light">HK protesters use American flag to honor American ideals of freedom, &c.</p></a>
               </div>
               </div>
 
 
+                    <footer class="blog-footer">
+                      <div class="row justify-content-between">
+                        <div class="col-sm-4">
+                          <p><a href="https://danielwnewman.github.io/home/about" class= "p-2 text-muted">About</a></p>
+                        </div>
+                        <div class="col-sm-4">
+                          <p><a href="https://danielwnewman.github.io/home/contact" class= "p-2 text-muted">Contact</a></p>
+                        </div>
+                      </div>
+                          <a href="#">Back to top</a>
 
-
-<footer class="blog-footer">
-  <div class="row justify-content-between">
-    <div class="col-md-4">
-      <p><a href="https://danielwnewman.github.io/home/about" class= "p-2 text-muted">About</a></p>
-    </div>
-    <div class="col-md-4">
-      <p><a href="https://danielwnewman.github.io/home/contact" class= "p-2 text-muted">Contact</a></p>
-    </div>
-  </div>
-      <a href="#">Back to top</a>
-
-</footer>
+                    </footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5mdXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
