--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h2>The news in meme</h2>
                 <h4><mdall>July 30, 2019 --- Daniel W. Newman</mdall></h4>
             <blockquote>
-              <img style="width:260px;" src="/Users/danielnewman/Desktop/buzzpanda.jpg">
+              <img style="width:100%;" src="/Users/danielnewman/Desktop/buzzpanda.jpg">
                 <a href=""><p class=".bg-light">HK protesters use American flag to honor American ideals of freedom, &c.</p></a>
               </div>
               </div>
