--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
   </div>
 
     <h2>2019 Q3</h2>
-  <div class="row" id ="body"></div>
+  <div class="row" id ="body">
 
   <!--A Post -->
-    <div class="col-md-4">
+    <div class="col-md-8">
      <div class="container" id ="link">
           <h2><a href="https://www.foxnews.com/science/moon-landing-bible-apollo-11-buzz-aldrin-communion">The Lord's Supper was the First Meal on the Moon</a></h2>
           <h4><mdall>July 18, 2019 --- Daniel W. Newman</mdall></h4>
@@ -42,6 +42,7 @@
           <p>&ensp;&ensp;Buzz Aldrin reportedly took communion before exiting the lunar module, making him the first person do so on an terrestrial body besides Earth. </p>
         </div>
         </div>
+
 
         <!--A Post -->
           <div class="col-md-4">
@@ -53,7 +54,7 @@
                 <a href=""><p class=".bg-light">HK protesters use American flag to honor American ideals of freedom, &c.</p></a>
               </div>
               </div>
-
+</div>
 
                     <footer class="blog-footer">
                       <div class="row justify-content-between">
