--- a/warble/index.html
+++ b/warble/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <html>
 <head>
-<title>Daniel W. Newman</title>
+<title>Cafe Warble</title>
 
 <!-- Required meta tags -->
    <meta charset="utf-8">
