--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
        <a href="https://danielwnewman.github.io/home/warble" class= "p-2 text-muted">Café Warble</a>
       <a href="https://danielwnewman.github.io/home/links" class= "p-2 text-muted">Index</a>
       <a href="https://danielwnewman.github.io/home/pictures" class= "p-2 text-muted">Pictures</a>
+      <a href="https://danielwnewman.github.io/home/music" class= "p-2 text-muted">Music</a>
       <a href="https://danielwnewman.github.io/home/archive" class= "p-2 text-muted">Archive</a>
     </nav>
   </div>
