--- a/index.html
+++ b/index.html
@@ -35,14 +35,23 @@
   <!--A Post -->
     <div class="col-md-8">
      <div class="container" id ="post">
-          <h2>Two Rappers</h2>
-          <h4><mdall>November 3, 2019 --- Daniel W. Newman</mdall></h4>
+          <h2>10 Books you should read today</h2>
+          <h4><mdall>May 20, 2020 --- Daniel W. Newman</mdall></h4>
       <blockquote>
-         <p>&ensp;&ensp;On Wed Oct 23 Truett Foster McKeehan died at the age of 21. He was preceded by his father Kevin McKeehan, better known as Christian music star Toby Mac. This loss is incredibly sad for the McKeehan family, and we should all share in their grief. I want to be clear that I don’t mean any disrespect to the McKeehan family. But Truett’s life should be a warning to us. Two days after Truett ’s death Kanye West released his album JESUS IS KING. These two rappers contrast interestingly when viewed on the stage of modern Christianity.</p>
-         <p>&ensp;&ensp;For years Kanye West has been at the top of the immoral rap music industry. With song lyrics such as and worse than, “You’re such a *#$%&* hoe, I love it.” Recently however, Kanye has shifted his position, claiming to have come to Christ. Burned by previous stars who “came to Christ,” Christians might have been tempted to dismiss his conversion as fake. While our judgement shouldn’t be finalized yet, something does seem to be different about Kanye. JESUS IS KING (released Friday October 25, 2019) is a marked change from Kanye’s usual style. Swear words have been replaced with clearly biblical themes. The difference I see in Kanye is this: Kanye is now sold out for Jesus. The old Kanye seemed to see Christ as another thing to add to his collection of idols, or just throw out all together. Now Kanye realizes that he can’t have Jesus and the idols; and Kanye has chosen to throw out the idols.</p>
-         <p>&ensp;&ensp;While Kanye has rejected the lie that serving Christ is the only way to go, Truett didn’t seem to have reached the same conclusion before he died. A quick perusal of his youtube Chanel will leave you wondering where the “Jesus” in the “Jesus Freak” of his father went. I am not denying his salvation here. I am simply asking the question: does Truett’s music reflect a sold out heart for God? The sad fact is that I am forced to conclude no.</p>
-         <p>&ensp;&ensp;The lives of these two rapper present an important dichotomy for Christians. It is often tempting to try and live like the world. Worldliness has tempted Christians since the early church age. In Acts 5 Ananias and Sapphira were killed by God for lying about keeping back money for themselves. They were trying to be Christians while at the same time holding back from Christ. But it doesn’t work that way; Christ said that no man can serve two masters. These two men should be examples to us. We need to be living all out for Jesus today, because we never know which day will be our last.</p>
-          </blockquote>
+         <p>&ensp;&ensp;Here are 10 books you should read ASAP. All of them are available on <a href="http://www.gutenberg.org"> Gutenberg, so get on over and start reading.</p>
+        <ul>
+        <li><a href="http://www.gutenberg.org/ebooks/2600"><e>War and Peace</e> by Leo Tolstoy</a></li>
+        <li><a href="http://www.gutenberg.org/ebooks/84"><e>Frankenstein; Or, The Modern Prometheus</e> by Mary Wollstonecraft Shelley</a></li>
+        <li><a href="http://www.gutenberg.org/ebooks/1342"><e>Pride and Prejudice</e> by Jane Austen</a></li>
+        <li><a href="http://www.gutenberg.org/ebooks/6848"><e>The Prince of India; Or, Why Constantinople Fell</e> by Lew Wallace</a>(The same Lew who wrote the famed <e>Ben Hur</e>)</li>
+        <li><a href="http://www.gutenberg.org/ebooks/44024"><e>The Art of War</e> by Sunzi and Wu</a></li>
+        <li><a href="http://www.gutenberg.org/ebooks/21302"><e>Utopia</e> by Jane Austen</a></li>
+        <li><a href="http://www.gutenberg.org/ebooks/2852"><e>The Hound of the Baskervilles</e> by Arthur Conan Doyle</a></li>
+        <li><a href="http://www.gutenberg.org/ebooks/1251"><e>The Cat of Bubastes: A Tale of Ancient Egypt</e> by G. A. Henty</a></li>
+        <li><a href="http://www.gutenberg.org/ebooks/17546"><e>The Lion of Saint Mark: A Story of Venice in the Fourteenth Century</e> by G. A. Henty</a></li>
+        <li><a href="http://www.gutenberg.org/ebooks/3836"><e>Swiss Family Robinson</e> by Johann David Wyss</a></li>
+        </ul>  
+        </blockquote>
     </div>
         </div>
   </div>
