--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <h2>10 Books you should read today</h2>
           <h4><mdall>May 20, 2020 --- Daniel W. Newman</mdall></h4>
       <blockquote>
-         <p>&ensp;&ensp;Here are 10 books you should read ASAP. All of them are available on <a href="http://www.gutenberg.org"> Gutenberg, so get on over and start reading.</p>
+         <p>&ensp;&ensp;Here are 10 books you should read ASAP. All of them are available on <a href="http://www.gutenberg.org"> Gutenberg</a>, so get on over and start reading.</p>
         <ul>
         <li><a href="http://www.gutenberg.org/ebooks/2600"><e>War and Peace</e> by Leo Tolstoy</a></li>
         <li><a href="http://www.gutenberg.org/ebooks/84"><e>Frankenstein; Or, The Modern Prometheus</e> by Mary Wollstonecraft Shelley</a></li>
