--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <li><a href="http://www.gutenberg.org/ebooks/1342"><e>Pride and Prejudice</e> by Jane Austen</a></li>
         <li><a href="http://www.gutenberg.org/ebooks/6848"><e>The Prince of India; Or, Why Constantinople Fell</e> by Lew Wallace</a>(The same Lew who wrote the famed <e>Ben Hur</e>)</li>
         <li><a href="http://www.gutenberg.org/ebooks/44024"><e>The Art of War</e> by Sunzi and Wu</a></li>
-        <li><a href="http://www.gutenberg.org/ebooks/21302"><e>Utopia</e> by Jane Austen</a></li>
+        <li><a href="http://www.gutenberg.org/ebooks/21302"><e>Utopia</e> by Thomas More</a></li>
         <li><a href="http://www.gutenberg.org/ebooks/2852"><e>The Hound of the Baskervilles</e> by Arthur Conan Doyle</a></li>
         <li><a href="http://www.gutenberg.org/ebooks/1251"><e>The Cat of Bubastes: A Tale of Ancient Egypt</e> by G. A. Henty</a></li>
         <li><a href="http://www.gutenberg.org/ebooks/17546"><e>The Lion of Saint Mark: A Story of Venice in the Fourteenth Century</e> by G. A. Henty</a></li>
