--- a/about/index.html
+++ b/about/index.html
@@ -23,8 +23,10 @@
   <div class="nav-scroller py-1 mb-2" >
     <nav class="nav d-flex">
       <a href="https://danielwnewman.github.io/home" class= "p-2 text-muted">Home</a>
+       <a href="https://danielwnewman.github.io/home/warble" class= "p-2 text-muted">Café Warble</a>
       <a href="https://danielwnewman.github.io/home/links" class= "p-2 text-muted">Index</a>
       <a href="https://danielwnewman.github.io/home/pictures" class= "p-2 text-muted">Pictures</a>
+      <a href="https://danielwnewman.github.io/home/music" class= "p-2 text-muted">Music</a>
       <a href="https://danielwnewman.github.io/home/archive" class= "p-2 text-muted">Archive</a>
     </nav>
   </div>
@@ -32,7 +34,7 @@
   <div class="container" style="width:450px;">
 
     <div class="card" style="margin:20px 20% 24px 20%;">
-    <img class="card-img-top" src="file:///Users/danielnewman/Documents/Creative/Websites/Blog/home/pictures/profile.jpg" alt="image" style="width:100%">
+    <img class="card-img-top" src="https://github.com/DanielWNewman/home/blob/master/about/profile.jpg" alt="image" style="width:100%">
   <div class="card-body">
     <h1>About Me</h1>
     <ul>
