--- a/music/index.html
+++ b/music/index.html
@@ -31,7 +31,7 @@
     </nav>
   </div>
   <div class="row">
-    <div class="col-sm-4"><a href="https://raw.githubusercontent.com/DanielWNewman/home/master/music/drEEm.wav"><img src="https://raw.githubusercontent.com/DanielWNewman/home/master/music/untitled wallpaper-2.png" class="img-thumbnail" alt="Abstract Pyramids"></a><p class="text-dark align-items-center">drEEms</p></div>
+    <div class="col-sm-4"><a href="https://raw.githubusercontent.com/DanielWNewman/home/master/music/drEEm.wav"><img src="https://github.com/DanielWNewman/home/blob/master/music/untitled%20wallpaper-2.png" class="img-thumbnail" alt="Abstract Pyramids"></a><p class="text-dark align-items-center">drEEms</p></div>
 
 
   </div>
