--- a/music/index.html
+++ b/music/index.html
@@ -31,7 +31,7 @@
     </nav>
   </div>
   <div class="row">
-    <div class="col-sm-4" style="text-align:center;"><a href="https://github.com/DanielWNewman/home/raw/master/music/drEEm.mp3"><img src="https://github.com/DanielWNewman/home/blob/master/music/untitled%20wallpaper-2.png?raw=true" class="img-thumbnail" alt="Abstract Pyramids"><p class="text-dark align-items-center">drEEms</p></a></div>
+    <div class="col-sm-4" style="text-align:center;"><a href="https://github.com/DanielWNewman/home/raw/master/music/drEEm.mp3"><img src="https://github.com/DanielWNewman/home/blob/master/music/untitled%20wallpaper-2.png?raw=true" class="img-thumbnail" alt="Abstract Pyramids"><p class="text-dark align-items-center">drEEm</p></a></div>
 
 
   </div>
